# ttv-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.core  Dockerfile.hunyuan  LICENSE  Makefile  PRD.md  README.md  api_config.dev.yaml  api_config.yaml  api_requirements.txt  dalle_tween.py  dalle_tween_gui.py  deploy.sh  docker-compose.dev.yml  docker-compose.http3.yml  docker-compose.prod.yml  docker-compose.yml  frame_extractor.py  implementation.md  keyframe_generator.py  openapi.yaml  pipeline.py  pipeline_config.yaml.sample  pyproject.toml  requirements.txt  run_tween_gui.bat  setup.sh  start-worker-validated.sh  validate_gcs_setup.py  video_generator_interface.py  worker_startup_check.py
.kiro/hooks/: pytest-test-runner.kiro.hook
.kiro/specs/api-server/: design.md  requirements.md  tasks.md
api/: __init__.py  __main__.py  config.py  config_merger.py  exceptions.py  gcs_client.py  hypercorn_config.py  logging_config.py  main.py  middleware.py  models.py  queue.py  server.py
api/routes/: __init__.py  health.py  jobs.py
archived/: Dockerfile  Dockerfile.base  Dockerfile.framepack  Dockerfile.wan21
archived/docs/: 02-getting-started.md  03-core-pipeline.md  05-architecture-and-interface.md  07-remote-api-generators.md
docs/: 01-overview.md  02-getting-started.md  03-core-pipeline.md  04-video-generation-backends.md  05-architecture-and-interface.md  06-local-generators.md  07-remote-api-generators.md  08-deployment-and-containers.md  09-i2i-keyframe-generation.md  09-reference.md  README.md  api-testing-guide.md  deployment-guide.md  docker-deployment.md  http3-setup.md  operations-monitoring.md
docs/implementation/: API_IMPLEMENTATION_REPORT.md  GCS_INTEGRATION_SUMMARY.md  RQ_WORKER_IMPLEMENTATION.md  SECURITY_MIDDLEWARE_IMPLEMENTATION.md  TRIO_STRUCTURED_CONCURRENCY_IMPLEMENTATION.md
generators/: __init__.py  base.py  exceptions.py  factory.py
generators/local/: __init__.py  hunyuan_video_generator.py  wan21_generator.py
generators/remote/: __init__.py  fal_generator.py  higgsfield_generator.py  minimax_generator.py  runway_generator.py  veo3_generator.py
plans/: I2I-keyframes.md  analysis.md  api-server.md  i2i-keyframes-implementation.md
tests/: INTEGRATION_TEST_SUMMARY.md  __init__.py  conftest.py  test_angie_http3.py  test_api_endpoints_comprehensive.py  test_artifact_endpoint.py  test_config.py  test_config_merger.py  test_config_merger_comprehensive.py  test_enhanced_monitoring.py  test_error_logging_integration.py  test_fal_generator.py  test_gcs_client.py  test_gcs_integration.py  test_gcs_uploader.py  test_health_endpoints.py  test_http3_protocol_integration.py  test_http3_setup.py  test_integration_mocked_backends.py  test_job_state_transitions_comprehensive.py  test_job_status.py  test_main.py  test_middleware.py  test_models.py  test_queue.py  test_security_integration.py  test_trio_executor.py  test_trio_integration.py  test_trio_video_worker.py  test_video_worker.py  test_worker_integration.py
tests/mocks/: __init__.py  mock_gcs.py  mock_generators.py  mock_redis.py
workers/: __init__.py  gcs_uploader.py  trio_executor.py  trio_video_worker.py  video_worker.py  worker_startup.py
